Fix spacing and font size of videos, footer and quote

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -457,6 +457,10 @@ footer h2 {
     margin: 0 auto;
   }
 
+  footer h2 {
+    padding-bottom: 1em;
+  }
+
   .footer-links ul {
     display: flex;
     justify-content: center;
@@ -578,12 +582,22 @@ footer h2 {
     text-align: center;
   }
 
+  .video-container {
+    margin-bottom: 0;
+    margin-top: 0;
+    padding: 0em 2em 2em 2em;
+  }
+
   .steps ul {
     display: none;
   }
 
   .steps h2 {
     text-align: center;
+  }
+
+  .quote-container h3{
+    font-size: 1em;
   }
 
   p {
